@@ -22,12 +22,12 @@
         <groupId>net.openhft</groupId>
         <artifactId>java-parent-pom</artifactId>
         <version>1.27ea1</version>
-        <relativePath />
+        <relativePath/>
     </parent>
 
     <artifactId>chronicle-core</artifactId>
     <version>2.27ea9-SNAPSHOT</version>
-    <name>OpenHFT/Chronicle Core</name>
+    <name>OpenHFT/Chronicle-Core</name>
     <description>Chronicle-Core</description>
     <packaging>bundle</packaging>
 
@@ -139,7 +139,6 @@
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <repositories>
@@ -191,6 +190,16 @@
                             <referenceVersion>2.27ea0</referenceVersion>
                             <artifactsURI>https://teamcity.chronicle.software/repository/download</artifactsURI>
                             <binaryCompatibilityPercentageRequired>100</binaryCompatibilityPercentageRequired>
+                            <extraOptions>
+                                <!--This skips "internal" but checks "impl"-->
+                                <extraOption>
+                                    <name>-keep-internal</name>
+                                </extraOption>
+                                <extraOption>
+                                    <name>skip-internal-packages</name>
+                                    <value>.*internal.*</value>
+                                </extraOption>
+                            </extraOptions>
                         </configuration>
                     </execution>
                 </executions>
@@ -258,7 +267,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <!--
                 generate maven dependencies versions file that can be used later
                 to install the right bundle in test phase.
@@ -267,6 +275,7 @@
 
                     target/classes/META-INF/maven/dependencies.properties
             -->
+            <!-- Produce a list of dependency versions for OSGi bundle tests -->
             <plugin>
                 <groupId>org.apache.servicemix.tooling</groupId>
                 <artifactId>depends-maven-plugin</artifactId>
@@ -279,6 +288,8 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Runs unit tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -289,6 +300,7 @@
                 </configuration>
             </plugin>
 
+            <!-- Build the OSGi bundle used by downstream projects -->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
@@ -300,7 +312,8 @@
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Export-Package>net.openhft.chronicle.core.*;-noimport:=true</Export-Package>
                         <Import-Package>software.chronicle.enterprise.core;resolution:=optional,
-                            *</Import-Package>
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
                 <executions>
@@ -351,7 +364,13 @@
 
     <profiles>
         <profile>
-            <id>code-review</id>
+            <id>assertions</id>
+            <properties>
+                <zero.cost.assertions>enabled</zero.cost.assertions>
+            </properties>
+        </profile>
+        <profile>
+            <id>sonar</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
@@ -361,6 +380,10 @@
             </properties>
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                    </plugin>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
@@ -411,46 +434,6 @@
             </build>
         </profile>
         <profile>
-            <id>assertions</id>
-            <properties>
-                <zero.cost.assertions>enabled</zero.cost.assertions>
-            </properties>
-        </profile>
-        <profile>
-            <id>java11</id>
-            <activation>
-                <jdk>[11,)</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>11</source>
-                            <target>11</target>
-                            <compilerArgs>
-                                <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
-                                <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
-                            </compilerArgs>
-                            <failOnWarning>false</failOnWarning>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>sonar</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.sonarsource.scanner.maven</groupId>
-                        <artifactId>sonar-maven-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>run-benchmarks</id>
             <build>
                 <plugins>
@@ -471,10 +454,10 @@
                         </configuration>
                         <executions>
                             <execution>
+                                <phase>test</phase>
                                 <goals>
                                     <goal>run</goal>
                                 </goals>
-                                <phase>test</phase>
                             </execution>
                         </executions>
                     </plugin>
